--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,11 @@ services:
   - type: web
     name: multiplayer-arena-cpp
     env: docker
-    dockerfilePath: ./server/Dockerfile
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: PORT
         value: 8080
-    healthCheckPath: /health
-    autoDeploy: false
+    region: frankfurt
+    plan: free
+    buildCommand: ""
+    startCommand: ""
